# fluffy-doodle

./: .gitignore  README.md
CompoundCalc/: CMakeLists.txt
CompoundCalc/include/: CompoundIntRateCalculator.h
CompoundCalc/src/: CompoundIntRateCalculator.cpp  main.cpp
IntRateCalc/: CMakeLists.txt
IntRateCalc/include/: IntRateCalculator.h
IntRateCalc/src/: IntRateCalculator.cpp  main.cpp
